Added calculator heading

--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@ Online platform to invest in stocks, derivatives, mutual funds, and more</pre
       </ul>
     </section>
     <section id="cal-div">
+      
       <section id="cal-fields">
+        <h1>Simple interest calculator</h1>
         <label name="amount">Principal</label>
         <input for="amount" id="amount" />
         <label name="rate">Rate(%)</label>
@@ -44,7 +46,7 @@ Online platform to invest in stocks, derivatives, mutual funds, and more</pre
         <input for="years" id="years" />
         <button id="submit">Calculate</button>
       </section>
-      <div id="result">Total amount:</div>
+      <div id="result"></div>
     </section>
   </body>
   <script src="script.js"></script>
