Added side menu

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <hr id="nav-bottom" />
     <section id="main">
       <ul>
-        <li><img src="https://zerodha.com/static/images/landing.png" /></li>
+        <img src="https://zerodha.com/static/images/landing.png" /></li>
         <li>
           <h1>Invest in Everything</h1>
         </li>
@@ -51,6 +51,17 @@ Online platform to invest in stocks, derivatives, mutual funds, and more</pre
         </section>
       </section>
       <div id="result">Total amount: 0</div>
+    </div>
+    
+    <div id="side-menu" class="menu">
+      <ul>
+        <li>SignUp</li>
+        <li>Products</li>
+        <li>About</li>
+        <li>Pricing</li>
+        <li>Support</li> 
+        <li><img src="/images/close.png" id="close-menu"></li>
+      </ul>
     </div>
     <div id="not-supported">Device not compatible</div>
   </body>
